--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 html{
-  font-family: Tahoma, Geneva, sans-serif;
-  background-color: #000000;
-  background-image: url("https://www.transparenttextures.com/patterns/light-sketch.png");
-  color: #d1e0e0;
-  padding: 20px 20px 20px 20px;
+  font-family: "Lucida Sans Typewriter", "Lucida Console", monaco;
+  background-color: white;
+  color: black;
+  padding: 30px;
+  margin: 50px;
 }
 h1{
   text-align: center;
