--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@ body{
   color: black;
   padding: 30px;
   margin: 50px;
-  border: 5px;
-  border-style: solid;
-}
+  border: 5px solid black;
 h1{
   text-align: center;
   text-decoration: underline;
