--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1{
   text-decoration: underline;
   padding-top: 15px;
   padding-bottom: 35px;
+  border-bottom: 5px solid gray;
 }
 #intro{
   text-align: center;
