--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ h1{
   padding-bottom: 35px;
   border-bottom: 5px solid black;
 }
+h2, h3{
+  padding-top: 15px;
+  border-top: 2px dashed black;
+}
 #intro{
   text-align: center;
   color: 	#808000;
@@ -25,14 +29,11 @@ aside {
     float: right;
     color: black;
 }
-.list{
+#list{
   background-color: #E6E6FA;
 }
 a {
   color: #0000FF;
-}
-hr {
-  border-top: 2px dashed black;
 }
 .images{
   display: block;
